Carousel Updates - Updated CSS for how carousel is handled - Fix: Updated navbar width on mobile - Deleted unneeded images - Added more global color variables

--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -1,11 +1,78 @@
+/* Slides styles */
 .slider-container {
     width: 100%;
     margin: 0 auto;
+    position: relative;
+}
+
+.slide {
+    height: 650px;
+    position: relative;
+    background-color: #000;
+}
+
+.slide-image {
+    width: 100%;
+    height: 100%;
+    object-fit: none;
+    opacity: 1;
+}
+
+.slick-prev:before,
+.slick-next:before {
+    opacity: 0 !important;
+}
+
+.slick-prev {
+    left: 10px !important;
+    z-index: 1;
+}
+
+.slick-next {
+    right: 40px !important;
+    z-index: 1;
+}
+
+/* Slide Text Styling */
+.slide hgroup {
+    position: absolute;
+    width: 100%;
+    color: white;
+    background: linear-gradient(0deg, #000000e3, transparent);
+    z-index: 2;
+    bottom: 0;
+    left: 0;
+    padding: 4em 5em;
+}
+.slide h1 {
+    font-size: 4em;
+    line-height: 1em;
+    margin-bottom: 0.25em;
+}
+
+.slide h2 {
+    font-size: 2em;
+    line-height: 1.2em;
 }
 
 @media screen and (min-width: 768px) {
     .slider-container {
         width: 80%;
         margin: 0 auto;
+        padding: 2em 0;
+    }
+    
+    .slide {
+        height: 700px;
+    }
+
+    .slide-image {
+        object-fit: cover;
+    }
+
+    .slick-prev:before,
+    .slick-next:before {
+        font-size: 50px !important;
+        opacity: 1 !important;
     }
 }
